# stanza-grpc

./: .dockerignore  .flake8  .gitignore  .yapfignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
commands/: download_externals.py  genproto.py  server.py
k8s/: deployment.yaml
proto/: Makefile  health.proto  stanza.proto
proto/google/api/: http.proto
proto/google/protobuf/: descriptor.proto
protobuf/: health.proto  stanza.proto
python/: .dockerignore  Dockerfile  Makefile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini
python/commands/: genproto.py  server.py
python/src/: __init__.py  env.py  logger.py
python/src/commands/: genproto.py  server.py
python/src/proto/: health_pb2.py  health_pb2_grpc.py  stanza_pb2.py  stanza_pb2_grpc.py
python/src/services/: health_service.py  stanza_service.py
python/src/usecases/: health_usecase.py  stanza_usecase.py
python/tests/: test_env.py
python/tests/usecases/: test_health_usecase.py  test_stanza_usecase.py
src/: env.py  logger.py  server.py
src/pb2/: health_pb2.py  health_pb2.pyi  stanza_pb2.py  stanza_pb2.pyi  stanza_pb2_grpc.py
src/services/: health_service.py  stanza_service.py
src/usecases/: health_usecase.py  stanza_usecase.py
tests/: test_env.py
tests/usecases/: test_stanza_usecase.py
